# kos

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.ld
boot/: CMakeLists.txt  boot.s  start.c
include/kernel/: kmalloc.h  system_info.h
include/kernel/dtb/: dtb.h
include/kernel/klibc/: stdlib.h
kernel/: CMakeLists.txt  kmalloc.c  system_info.c
kernel/dtb/: CMakeLists.txt  dtb.c
kernel/klibc/: CMakeLists.txt  stdlib.c
toolchains/: aarch64-none-elf.cmake
